# DataStructure-Project

./: CMakeLists.txt  README.md  compile.bat  main.c  testmaker.py
data/: lessons.txt  students-table-back.html  students-table-front.html  students-table.html  students.txt
src/: Active.c  BTree.c  Lesson.c  LessonBase.c  base.c
src/Test/: test-B-tree.c  test-active.c  test-lesson.c
src/include/: Active.h  BTree.h  Lesson.h  LessonBase.h  base.h  datastructure.h  help.h
